fixed z-index issues

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ a {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 12px;
+    z-index: 2;
 }
 
 .click {
@@ -188,6 +189,7 @@ LANDING PAGE
     width: 100%;
     max-width: 1000px;
     padding: 0 30px;
+    z-index: 20;
 }
 
 .title {
@@ -237,6 +239,7 @@ LANDING PAGE
     position: absolute;
     bottom: 32px;
     right: 40px;
+    z-index:20;
 }
 
 .scroll {
@@ -244,6 +247,7 @@ LANDING PAGE
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 20;
 }
 
 .scroll__icon {
@@ -502,6 +506,10 @@ MODAL
 PROJECTS
 
 */
+
+.h1__wrapper {
+    position: relative;
+}
 
 .section__title {
     text-align: center;
